--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0"
   },
   "devDependencies": {
